# ics-gcal-importer

./: .editorconfig  .gitignore  README.md  justfile  pyproject.toml
.github/actions/version-check/: action.yml
.github/workflows/: partial-ci-checks.yml  pr.yml  release.yml
src/ics_gcal_importer/: cli.py  gcal_client.py  main.py  parse_ics.py
tests/: test_cli.py
tests/_data/test_case_1/: bahn_2_events.ics
